Checked in site.cfg

--- a/.gitignore
+++ b/.gitignore
@@ -114,7 +114,7 @@ numpy/core/include/numpy/__multiarray_api.h
 numpy/core/include/numpy/__ufunc_api.h
 numpy/core/include/numpy/_numpyconfig.h
 numpy/version.py
-site.cfg
+# site.cfg
 setup.cfg
 .tox
 numpy/core/include/numpy/__multiarray_api.c
