Forcing shared blas libs

--- a/site.cfg
+++ b/site.cfg
@@ -2,8 +2,9 @@
 # It's copied from site.cfg.example in the root of the project
 
 [DEFAULT]
-libraries = lapack,cblas,f2c,blas
+libraries = liblapack.so,libcblas.so,libf2c.so,libblas.so
+# src_dirs = /usr/local/code/faasm/third-party/faasm-clapack/clapack
 library_dirs = /usr/local/faasm/llvm-sysroot/lib/wasm32-wasi
-include_dirs = /usr/local/faasm/llvm-sysroot/include
-search_static_first = true
+include_dirs = /usr/local/faasm/llvm-sysroot/include:/usr/local/faasm/llvm-sysroot/include/clapack
+search_static_first = 0
 
